--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
                         <div class="form-group">
                             <label for="referrer">Referrer</label>
-                            <input type="text" id="referrer" value="google.com" placeholder="您的网站或应用程序名称">
+                            <input type="text" id="referrer" value="pollinations.ai" placeholder="您的网站或应用程序名称">
                         </div>
 
                         <div class="form-group">
